tests/type-checking/and-or-not-is/is/is_int_rhs_fail.xdsl
// RUN: choco-opt -p check-assign-target,name-analysis,type-checking %s | filecheck %s

// 
// b: bool = True
// b = [0] is 0


builtin.module() {
  choco.ast.program() {
    choco.ast.var_def() {
      choco.ast.typed_var() ["var_name" = "b"] {
        choco.ast.type_name() ["type_name" = "bool"]
      }
    } {
      choco.ast.literal() ["value" = !choco.ast.bool<True>]
    }
  } {
    choco.ast.assign() {
      choco.ast.id_expr() ["id" = "b"]
    } {
      choco.ast.binary_expr() ["op" = "is"] {
        choco.ast.list_expr() {
          choco.ast.literal() ["value" = 0 : !i32]
        }
      } {
        choco.ast.literal() ["value" = 0 : !i32]
      }
    }
  }
}
// CHECK: Semantic error:
